Creacion de formulario usuario

--- a/public/css/estilos_home.css
+++ b/public/css/estilos_home.css
@@ -21,9 +21,9 @@ body {
         "cabecera cabecera-bot"
         "imagen formulario"
         "pie pie";
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: 5fr 2fr;
     grid-template-rows: 10vh auto 60px;
-    max-width: 1500px;
+    /*max-width: 1500px;*/
 }
 
 header {
